--- a/cliente/src/componentes/Formulario/formularios.css
+++ b/cliente/src/componentes/Formulario/formularios.css
@@ -5,7 +5,7 @@
     align-items: center;
     gap: 18px;
     padding: 20px 25px;
-    background: linear-gradient(135deg, #1e1e2f, #2c2c3e);
+    background: linear-gradient(135deg, #2e2e4d, #030308);
     border-radius: 16px;
 
     /* Sombra elegante */
