--- a/cliente/src/componentes/Formulario/formularios.css
+++ b/cliente/src/componentes/Formulario/formularios.css
@@ -5,7 +5,7 @@
     align-items: center;
     gap: 18px;
     padding: 20px 25px;
-    background: linear-gradient(135deg, #2e2e4d, #030308);
+    background:var(--color-gradiente-azul);
     border-radius: 16px;
 
     /* Sombra elegante */
@@ -142,7 +142,7 @@
         width: 90%;
         padding: 20px;
         gap: 10px;
-        background-color: #42a5f5;
+        
     }
     .botonera_formulario {
         flex-direction: column;
