--- a/cliente/src/componentes/Selector/selector.css
+++ b/cliente/src/componentes/Selector/selector.css
@@ -8,7 +8,7 @@
     padding: 18px;
     border-radius: 16px;
 
-    background: rgba(255, 255, 255, 0.08);
+    background:transparent;
     backdrop-filter: blur(10px);
 
     border: 1px solid rgba(255, 255, 255, 0.15);
